# WARNING: head commit changed in the meantime
ss

--- a/the simpleFileReceptor dropzone.htm
+++ b/the simpleFileReceptor dropzone.htm
@@ -2182,5 +2182,5 @@ body {
 <div class="title">TU-D Test Data Transfer</div> <!---->
 
 <!-- Change /upload-target to your upload address -->
-<form class="dropzone" action="UploadServlet" ></form>
+<form class="dropzone" action="/data" ></form>
 </body>
